--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Sobre</title>
         <link rel="stylesheet" href="css/styleSobre.css">
-        <link rel="stylesheet" href="css/body.css">
+        <link rel="stylesheet" href="css/Body.css">
         
         </head>
 
