--- a/trilhaSonora.html
+++ b/trilhaSonora.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/styleTrilhaSonora.css">
-        <link rel="stylesheet" href="css/body.css">
+        <link rel="stylesheet" href="css/Body.css">
         <title>Trilha Sonora</title>
     </head>
     <body>
