--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Contato</title>
         <link rel="stylesheet" href="css/styleContato.css">
-        <link rel="stylesheet" href="css/body.css">
+        <link rel="stylesheet" href="css/Body.css">
     </head>
     <body>
 
